Correct alignment of the two cta buttons

--- a/theme/base/stylesheets/pages/consent/ctas.scss
+++ b/theme/base/stylesheets/pages/consent/ctas.scss
@@ -21,6 +21,7 @@
             > label.modal {
                 background-image: unset;
                 font-weight: 700;
+                padding-right: 0;
             }
         }
     }
